# 3ds-bannertool

./: .astylerc  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml  cleanup-runs.yml
cmake/: packaging.cmake  update-libs.cmake
source/: cmd.cpp  log.cpp  log.h  main.cpp  types.cpp  types.h  utils.cpp  utils.h
source/3ds/: cbmd.cpp  cbmd.h  cwav.cpp  cwav.h  data.h  lz11.cpp  lz11.h  smdh.h
source/pc/: stb_vorbis.h
